[package]
name = "maze_gen"
version = "0.1.0"
edition = "2018"
authors = ["Jorge Rinaldi <jrg.rinaldi@gmail.com>"]
license = "MIT"
repository = "https://github.com/m-rinaldi/maze_gen"
description = "procedural generation of mazes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
